Implementa autenticação com JWT (#27)
* Refatora classe que cria conta de usuário
* Atualiza dependências do projeto
* Adiciona endpoint de login
* Adiciona middleware de autenticação com JWT
